# safetrace

./: .env.example  .gitignore  AUTHENTICATION_SUMMARY.md  DEPLOYMENT_CHECKLIST.md  DEPLOY_FINAL.md  RAILWAY_DEPLOY.md  RAILWAY_ENV_SETUP.md  README.md  analiseSafeTrace.md  deploy.bat  deploy.sh  pyproject.toml  railway.json  requirements.txt  test_auth.py
app/: __init__.py  config.py  constants.py  main.py
app/api/: __init__.py  admin_routes.py  auth_jwt_routes.py  auth_middleware.py  auth_routes.py  debug_routes.py  dependencies.py  frontend_routes.py  routes.py
app/cache/: __init__.py  memory.py  postgres.py  redis.py
app/core/: __init__.py  cache.py  exceptions.py  provider.py
app/db/: schema.py
app/middleware/: monitoring.py
app/models/: __init__.py  auth.py  blockchain.py  risk.py
app/providers/: __init__.py  blockchain_com.py  blockchair.py  multi_provider.py
app/services/: __init__.py  audit_logger.py  auth_service.py  history_service.py  metrics_service.py  pdf_generator.py  rate_limit_service.py  risk_scorer.py  tracer.py
app/templates/: analyze.html  dashboard.html  documentation.html  landing.html
docs/: API_LOGGING.md  AUTHENTICATION.md  AUTH_FIX.md  DEPLOYMENT.md  FIX_SUMMARY.md  PROVIDERS.md  QUICK_START_SAAS.md  RAILWAY_SETUP.md  SAAS_ROADMAP.md  TESTE_AUTH.md  TROUBLESHOOTING_AUTH.md
scripts/: create_admin.py  init_db.py  test_auth.py  test_blockchain_com.py  test_endpoints.py  test_multi_provider.py  test_trace.py  verify_connections.py
tests/: conftest.py  test_api.py  test_cache.py  test_models.py  test_risk_scorer.py
(+18 files in other folders)
